<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_split"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/train_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_split"
        app:layout_constraintTop_toBottomOf="@+id/label_training" />

    <TextView
        android:id="@+id/label_training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/training"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_recognition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:text="@string/recognition"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_split" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/recognition_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@+id/DTW_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_recognition" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/mode_switcher"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_mode" />

    <TextView
        android:id="@+id/label_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="1dp"
        android:text="@string/mode_training"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mode_info"
        app:layout_constraintEnd_toStartOf="@+id/mode_switcher"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mode_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingBottom="4dp"
        android:text="@string/mode_training_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gesture_input"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gesture_input"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:background="@color/colorBackground"
        android:backgroundTint="@color/colorBackground"
        android:backgroundTintMode="src_over"
        android:text="@string/hold"
        android:textColor="#AA00FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mode_switcher"
        app:layout_constraintStart_toEndOf="@id/vertical_split"
        app:layout_constraintTop_toTopOf="@id/label_mode" />

    <TextView
        android:id="@+id/DTW_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="1dp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label_mode"
        app:layout_constraintEnd_toStartOf="@+id/mode_switcher"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

